add first version of app for testing

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title> Install My Sample App</title>
 </head>
 <body>
-    <a href="ms-appinstaller:?source=https://burtonvuenative.azurewebsites.net/BurtonVueNative.msixbundle">Install BurtonVueNative</a><br/>
-    <a href="https://burtonvuenative.azurewebsites.net/Burton Rodman Self-signed Certificate.pfx">Download certificate</a>
+    <a href="ms-appinstaller:?source=https://calm-meadow-01cf1cd0f.azurestaticapps.net/BurtonVueNative.msixbundle">Install BurtonVueNative</a><br/>
+    <a href="https://calm-meadow-01cf1cd0f.azurestaticapps.net/BurtonVueNative.cer">Download certificate</a>
 </body>
 </html>
