--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title> Install My Sample App</title>
 </head>
 <body>
-    <a href="ms-appinstaller:?source=https://calm-meadow-01cf1cd0f.azurestaticapps.net/BurtonVueNative.msixbundle">Install BurtonVueNative</a><br/>
+    <a href="ms-appinstaller:?source=https://calm-meadow-01cf1cd0f.azurestaticapps.net/BurtonVueNative.msixbundle">
+      Install BurtonVueNative 1.0.3 (Release)
+    </a><br/>
     <a href="https://calm-meadow-01cf1cd0f.azurestaticapps.net/BurtonVueNative.cer">Download certificate</a>
 </body>
 </html>
