--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <title> Install My Sample App</title>
 </head>
 <body>
-    <a href="ms-appinstaller:?source=https://calm-meadow-01cf1cd0f.azurestaticapps.net/BurtonVueNative.msixbundle">
-      Install BurtonVueNative 1.0.3 (Release)
-    </a><br/>
+  <ol>
+    <li>Install the test certificate to Local Machine > Trusted People</li>
     <a href="https://calm-meadow-01cf1cd0f.azurestaticapps.net/BurtonVueNative.cer">Download certificate</a>
+    <li>
+      <a href="ms-appinstaller:?source=https://calm-meadow-01cf1cd0f.azurestaticapps.net/BurtonVueNative.msixbundle">
+        Install BurtonVueNative 1.0.3 (Release)
+      </a>
+    </li>
+  </ol>
 </body>
 </html>
