update to 1.0.6 (with appbundle)

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <li>Install the test certificate to Local Machine > Trusted People</li>
     <a href="https://calm-meadow-01cf1cd0f.azurestaticapps.net/BurtonVueNative.cer">Download certificate</a>
     <li>
-      <a href="ms-appinstaller:?source=https://calm-meadow-01cf1cd0f.azurestaticapps.net/BurtonVueNative.msixbundle">
-        Install BurtonVueNative 1.0.4 (Release)
+      <a href="ms-appinstaller:?source=https://calm-meadow-01cf1cd0f.azurestaticapps.net/BurtonVueNative.appinstaller">
+        Install BurtonVueNative 1.0.6 (Release)
       </a>
     </li>
   </ol>
